# steadfast

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXTRACT_LIST.md  LICENSE  PUBLISH.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: CNAME  anti-detect.md  auth-and-sessions.md  getting-started.md  index.md
docs/blog/: why-browser-agents-lose-their-sessions.md
examples/: 01_twitter_post.py  02_linkedin_with_cookies.py  03_reddit_comment.py  04_session_save_restore.py  05_multi_account.py  06_facebook_post.py  07_youtube_comment.py  08_youtube_upload.py  09_instagram_post.py  10_tiktok_upload.py
steadfast/: __init__.py  _log.py  anti_detect.py  browser_manager.py  exceptions.py  remote_display.py  utils.py
tests/: test_anti_detect.py  test_browser_manager.py  test_exceptions.py  test_facebook.py  test_instagram.py  test_linkedin.py  test_log.py  test_reddit.py  test_tiktok.py  test_twitter.py  test_utils.py  test_youtube.py
tests/integration/: test_anti_detect_e2e.py
